front improvements
